Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9439

wscript and cscript always crash in CommandLineToArgvW

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Wine
    • None

    Description

      These apps are marked as console apps so wWinMain's lpCmdLine parameter is set to NULL by our CRT startup code.
      In Wine, both of these are marked as GUI apps (although Wine's startup code doesn't have this issue anyway).
      On Windows, cscript is CUI, wscript is GUI as expected. We should use this approach, since unlike in Wine, making cscript GUI is gonna be problematic for us since it'll be missing the console.

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              ThFabba ThFabba
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: