[WSCRIPT] - Correctly use CommandLineToArgvW. Fixes cscript crashing on start. CORE-9439 #resolve

svn path=/trunk/; revision=67001